2010-12-01  Geoffrey Garen  <ggaren@apple.com>

        Try to fix the GTK Linux build.

        * JavaScriptCore.gypi: Added OSAllocator to the project.

2010-12-01  Geoffrey Garen  <ggaren@apple.com>

        Try to fix the Qt Linux build.

        * wtf/OSAllocatorPosix.cpp: Use the right errno.h.

2010-12-01  Geoffrey Garen  <ggaren@apple.com>

        Try to fix Windows build: export some more symbols.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-12-01  Geoffrey Garen  <ggaren@apple.com>

        Try to fix the Qt Linux build.

        * wtf/wtf.pri: Use the POSIX OSAllocator for Qt Linux.

2010-12-01  Geoffrey Garen  <ggaren@apple.com>

        Windows build fix: commit doesn't have a return value.

        * wtf/OSAllocatorWin.cpp:
        (WTF::OSAllocator::commit):

2010-12-01  Geoffrey Garen  <ggaren@apple.com>

        Build fix: Export some symbols.

        * JavaScriptCore.exp:

2010-12-01  Geoffrey Garen  <ggaren@apple.com>

        Build fix.

        * JavaScriptCore.xcodeproj/project.pbxproj: Export OSAllocator.h as private
        so other projects can see it.

        * wtf/OSAllocatorPosix.cpp: #include UnusedParam.h for UNUSED_PARAM.

2010-12-01  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.

        Baby step toward a cross-platform virtual memory abstraction: created
        an all-static OSAllocator class and changed MarkStack to use it.

        * JavaScriptCore.exp: These functions are inlined now.

        * JavaScriptCore.vcproj/WTF/WTF.vcproj: Added OSAllocatorWin.cpp.

        * JavaScriptCore.xcodeproj/project.pbxproj: Added OSAllocatorPosix.cpp.

        * runtime/MarkStack.h:
        (JSC::MarkStack::allocateStack):
        (JSC::MarkStack::releaseStack): Use OSAllocator instead of rolling our
        own platform-specific code.

        * runtime/MarkStackNone.cpp: Removed. Nothing used this.

        * runtime/MarkStackPosix.cpp: 
        * runtime/MarkStackSymbian.cpp: